# zksnark-test

./: .gitmodules  CMakeLists.txt
depends/: CMakeLists.txt
src/: CMakeLists.txt  MerkleTree.h  Zerocash.h  com_hanson_test_JoinSplit.cpp  com_hanson_test_JoinSplit.h  main.cpp
src/zerocash_pour_ppzksnark/: zerocash_pour_gadget.hpp  zerocash_pour_gadget.tcc  zerocash_pour_ppzksnark.tcc
src/zerocash_pour_ppzksnark/profiling/: profile_zerocash_pour_gadget.cpp
src/zerocash_pour_ppzksnark/tests/: test_zerocash_pour_ppzksnark.cpp
